# webscraping-experimentation

./: config.toml  pyproject.toml
docs/: api-exploration-report.md  project-documentation.md
src/livescores/: __init__.py  __main__.py  config.py  main.py  models.py  state.py
src/livescores/polling/: engine.py  scheduler.py
src/livescores/sources/: base.py  correlator.py  espn.py  ids.py  sofascore.py
src/livescores/utils/: http.py  team_names.py
src/livescores/web/: app.py  routes.py
src/livescores/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_config.py  test_correlator.py  test_engine.py  test_espn.py  test_models.py  test_scheduler.py  test_sofascore.py  test_state.py  test_team_names.py  test_web.py
tests/fixtures/: espn_scoreboard_finished.json  espn_scoreboard_live.json  espn_scoreboard_scheduled.json  sofascore_event_detail.json  sofascore_incidents.json  sofascore_live_events.json  sofascore_scheduled_events.json  sofascore_statistics.json
